hphp/hack/test/typecheck/const_attribute/usage/class.php
<?hh // strict

<<__Const>>
class Concrete {}

<<__Const>>
abstract class Abstract {}

<<__Const>>
final class Final {}

<<__Const>>
abstract final class AbstractFinal {}
